--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="utf-8"/>
-        <title>Mr. Kami Web Portfolio</title>
+        <title>Mr. Kami's Web Portfolio</title>
+        <link href="https://fonts.googleapis.com/css?family=Carrois+Gothic+SC&display=swap" rel="stylesheet">
     </head>
-<body>
-    <p><strong>test text lol :D</strong></p>
-</body>
+    <body>
+        <p>mashhood anwar</p>
+        <button id="projects_button">projects</button>
+        <button id="about_button">about me</button>
+        <button id="contact_button">contact</button>
+    </body>
 </html>
