--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8"/>
-        <title>Mr. Kami's Web Portfolio</title>
+        <title>Web Portfolio</title>
         <link href="https://fonts.googleapis.com/css?family=Carrois+Gothic+SC&display=swap" rel="stylesheet">
     </head>
     <body>
-        <p>mashhood anwar</p>
+        <p>Mr. Kami</p>
         <button id="projects_button">projects</button>
         <button id="about_button">about me</button>
         <button id="contact_button">contact</button>
