--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
     <head>
         <meta charset="utf-8"/>
         <title>Web Portfolio</title>
+        <noscript>JavaScript must be enabled to run this page</noscript>
         <link href="https://fonts.googleapis.com/css?family=Carrois+Gothic+SC&display=swap" rel="stylesheet">
+        <link href="styling.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <p>Mr. Kami</p>
-        <button id="projects_button">projects</button>
-        <button id="about_button">about me</button>
-        <button id="contact_button">contact</button>
+        <p id="name">Mr. Kami</p>
+        <button id="projects_button" class="button">projects</button>
+        <button id="about_button" class="button">about me</button>
+        <button id="contact_button" class="button">contact</button>
     </body>
 </html>
