--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <link href="https://fonts.googleapis.com/css?family=Catamaran:100&display=swap" rel="stylesheet">
         <link href="styling.css" rel="stylesheet" type="text/css">
         <script src="script.js"></script>
+        <script src="anime.min.js"></script>
+        
     </head>
 
     <body>
