added projects page

--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
     <head>
         <meta charset="utf-8"/>
-        <title>Web Portfolio</title>
+        <title>Mr. Kami</title>
         <noscript>JavaScript must be enabled to run this page</noscript>
         <link href="https://fonts.googleapis.com/css?family=Catamaran:100&display=swap" rel="stylesheet">
         <link href="styling.css" rel="stylesheet" type="text/css">
         <script src="script.js"></script>
         <script src="anime.min.js"></script>
-        
     </head>
 
     <body>
@@ -21,5 +19,4 @@
             <button id="contact_button" class="button">CONTACT</button>
         </div>
     </body>
-
 </html>
