--- a/projects.html
+++ b/projects.html
@@ -24,8 +24,13 @@
 
         <div id="project1" class="project">
             <p class="project_title"><img src="https://via.placeholder.com/150" width="150px" height="150px">Kronos RGB</p>
-            <p>a self made WS2812B addressable rgb led controller</p>
-            <p><a href="">Link to project</a></p>
+            <p>Addressable RGB LED software that allows the user to display different animations and effects, alongside brightness and speed control. It is designed
+                to be used by an arduino, and is made to be flexible with any type of arduino IDE compatible device. Those who wish to use this software must have
+                a sufficient power supply for the amount of LED's to use since they are quite power hungry when at full brightness and max RGB values. The GUI has
+                been created using WinForms and C#. Communication between the software and the arduino uses Serial, and installation and usage has been designed to be
+                simple and straightforward. 
+            </p>
+            <p><a href="">>> Go to project </a></p>
         </div>
 
     </body>
