added about me and contact pages

--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8"/>
-        <title>Mr. Kami // Projects</title>
+        <title>Projects</title>
         <noscript>JavaScript must be enabled to run this page</noscript>
         <link href="https://fonts.googleapis.com/css?family=Catamaran:100&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Questrial&display=swap" rel="stylesheet">
@@ -21,16 +21,9 @@
 
         <p id="title">P R O J E C T S</p>
         <p id="underline"></p>
+        <br><br>
 
-        <div id="project1" class="project">
-            <p class="project_title"><img src="https://via.placeholder.com/150" width="150px" height="150px">Kronos RGB</p>
-            <p>Addressable RGB LED software that allows the user to display different animations and effects, alongside brightness and speed control. It is designed
-                to be used by an arduino, and is made to be flexible with any type of arduino IDE compatible device. Those who wish to use this software must have
-                a sufficient power supply for the amount of LED's to use since they are quite power hungry when at full brightness and max RGB values. The GUI has
-                been created using WinForms and C#. Communication between the software and the arduino uses Serial, and installation and usage has been designed to be
-                simple and straightforward. 
-            </p>
-            <p><a href="">>> Go to project </a></p>
+        <div id="project_list">
         </div>
 
     </body>
