--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
 
     <body>
-        <p id="name">M R . K A M I</p>
+        <pre id="name">MASHHOOD ANWAR</pre>
         <p id="underline"></p>
         <div id="buttons">
             <button id="projects_button" class="button">PROJECTS</button>
