--- a/about.html
+++ b/about.html
@@ -7,8 +7,8 @@
         <link href="https://fonts.googleapis.com/css?family=Catamaran:100&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Questrial&display=swap" rel="stylesheet">
         <link href="about_styling.css" rel="stylesheet" type="text/css">
-        <script src="about_script.js"></script>
-        <script src="anime.min.js"></script>
+        <script src="about_script.js" type="text/javascript"></script>
+        <script src="anime.min.js" type="text/javascript"></script>
     </head>
 
     <body>
