--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,8 @@
         <link href="https://fonts.googleapis.com/css?family=Questrial&display=swap" rel="stylesheet">
         <link href="contact_styling.css" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-        <script src="contact_script.js"></script>
-        <script src="anime.min.js"></script>
+        <script src="contact_script.js" type="text/javascript"></script>
+        <script src="anime.min.js" type="text/javascript"></script>
         
     </head>
 
