--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <noscript>JavaScript must be enabled to run this page</noscript>
         <link href="https://fonts.googleapis.com/css?family=Catamaran:100&display=swap" rel="stylesheet">
         <link href="styling.css" rel="stylesheet" type="text/css">
-        <script src="script.js"></script>
-        <script src="anime.min.js"></script>
+        <script src="script.js" type="text/javascript"></script>
+        <script src="anime.min.js" type="text/javascript"></script>
     </head>
 
     <body>
