page reload fix 3

--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
         <link href="https://fonts.googleapis.com/css?family=Catamaran:100&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Questrial&display=swap" rel="stylesheet">
         <link href="projects_styling.css" rel="stylesheet" type="text/css">
-        <script src="projects_script.js" type="text/javascript"></script>
+        <script src="projects_script.js?" type="text/javascript"></script>
         <script src="anime.min.js" type="text/javascript"></script>
         
     </head>
